# RuCa

./: .env.template  .gitignore  LICENSE.txt  README.md  README_ru.md  evaluation.py  index.html  json_parser.py  output_parser.py  pyproject.toml  pytest.ini.py  run_tests.py
.github/workflows/: python-package.yml
LLM_with_tools/: pyproject.toml
LLM_with_tools/src/: avia_tools.py  bench_agent.py  benchmark_results.json  benchmark_results_model_B_run1.json  big_testy.json  caclute.py  config.yaml  config_loader.py  datetime_tools.py  detailed_errors.json  evaluate_results.json  evaluation.py  four_more_agent.py  json_parser.py  main.py  output_parser.py  queries_error_ready.json  query_retail.json  retail_tools.py  settings.py  test_retail_tools.py  tools.py  trans.py  trash.py  try_agent.py  weather_and_convert.py
LLM_with_tools/src/queries/: query_airlines_ready.json  query_basic.json  query_booking_airbnb.json  query_combine.json
LLM_with_tools/src/results/: run_model_A_1.json  run_model_B_1.json  run_model_C_1.json
RuCa-master/: LICENSE  output_parser.py
RuCa-master/LLM_with_tools/: .env.template  pyproject.toml
RuCa-master/LLM_with_tools/src/: bench_agent.py  benchmark_results.json  config_loader.py  detailed_errors.json  evaluation.py  four_more_agent.py  json_parser.py  output_parser.py  query_combine.json  try_agent.py
RuCa-master/LLM_with_tools/src/queries/: big_testy.json
configs/: __init__.py  config.yaml
data/: comparison_results.json
queries/: queries_error.json  query_airlines.json  query_airlines_ready.json  query_basic.json  query_booking_airbnb.json  query_retail.json
src/: caclute.py  json_parser.py  onemoreagent.py  pipeline_or_hz.py  retail_tools.py  trans.py  trash.py  weather_and_convert.py
src/RuCa/: settings.py
src/RuCa/agents/: four_more_agent.py
src/RuCa/tools/: __init__.py  retail_tools.py
src/RuCa/utils/: __init__.py  config_loader.py  json_parser.py  output_parser.py
src/queries/: query_basic.json  query_combine.json  query_retail.json
src/ruca/: main.py  settings.py
src/ruca/agents/: four_more_agent.py
src/ruca/querries/: queries_error_ready.json  query_airlines_ready.json  query_retail.json
src/ruca/tests/: __init__.py
src/ruca/tests/tools/: __init__.py  conftest.py  test_avia_tools.py  test_calculator_tools.py  test_datetime_tools.py  test_retail_tools.py  test_translation_tools.py  test_weather_and_convert_tools.py
src/ruca/tools/: __init__.py  avia_tools.py  caclculator_tools.py  datetime_tools.py  retail_tools.py  translation_tools.py  trash_tools.py  weather_and_convert_tools.py
src/ruca/utils/: __init__.py  config_loader.py  evaluation.py  json_parser.py  metrics_enum.py  output_parser.py
