[project]
name = "LLM"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "ddgs>=9.6.1",
    "dotenv>=0.9.9",
    "fastapi>=0.121.2",
    "fastmcp>=2.4.0",
    "ipykernel>=7.0.1",
    "mcp>=1.20.0",
    "numpy>=2.3.4",
    "openai>=2.6.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "typing>=3.10.0.0",
]
